--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=work
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/work
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
